fix(events-list): truncate event title and date

--- a/src/components/events-list/events-list.less
+++ b/src/components/events-list/events-list.less
@@ -43,18 +43,18 @@
 	}
 
 	&--title {
-		// .truncate-text();
+		.truncate-text();
 		float: left;
 		margin-bottom: 0;
-		width: 50%;
+		width: 55%;
 		font-size: @text-size-smaller;
 	}
 
 	&--date {
-		// .truncate-text();
+		.truncate-text();
 		float: right;
 		margin-top: .2rem;
-		width: 50%;
+		width: 43%;
 		font-size: @text-size-small;
 		text-align: right;
 	}
